--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "module3",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://artemdev.github.io/goit-react-hw-01-components",
+  "homepage": "https://artemdev.github.io/goit-react-hw-03-image-finder",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -10,9 +10,6 @@
     "axios": "^0.21.1",
     "basiclightbox": "^5.0.3",
     "gh-pages": "^3.1.0",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.2",
-    "prettier": "^2.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-loader-spinner": "^3.1.14",
@@ -45,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^4.3.6",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1"
   }
 }
